--- a/app/views/types/index.html.erb
+++ b/app/views/types/index.html.erb
@@ -3,9 +3,9 @@
 
 <ol>
   <% @types.each do | type | %>
-  <li><%= type.type_name %></li>
+  <li><%= type.name %></li>
   <% end %>
 </ol>
 
 
-<%= select("type", "id", Type.all.map{|type| [type.type_name, type.id]}) %>
+<%= select("type", "id", Type.all.map{|type| [type.name, type.id]}) %>
