--- a/app/views/post/_post.html
+++ b/app/views/post/_post.html
@@ -72,10 +72,12 @@
 
 		<div class="FilmName">
 		FilmName
+    <%= select("title", "id", Title.all.map{|title| [title.name, title.id]}) %>
 		</div>
 
 		<div class="FilmType">
 		FilmType
+    <%= select("type", "id", Type.all.map{|type| [type.name, type.id]}) %>
 		</div>
 
 
