user-input,login,_post(Date position)

--- a/app/views/login.html
+++ b/app/views/login.html
@@ -47,7 +47,6 @@
         margin-left: auto;
         margin-bottom: 20px;
         margin-top: 20px;
-        border: 1px solid grey;
     }
     div.UserPassword {
         width: 200px;
@@ -55,7 +54,6 @@
         margin-right: auto;
         margin-top: 20px;
         margin-bottom: 20px;
-        border: 1px solid grey;
     }
     div.UserLoginBotton {
         width: 50px;
@@ -72,9 +70,9 @@
         <div class="UserLogin">
         USER LOGIN
         </div>
-        
+
         <div class="tiltle2">
-        
+
 
 			<div class="UserPicture">
 			  <a href="https://www.google.com/">
@@ -83,26 +81,24 @@
 			    </img>
 			  </a>
 			</div>
-        
-        
+
+
         </div>
-        
+
         <div class="Blank">
-            
+
         </div>
-        
+
         <div class="UserName">
-            <p class="UserName">
-            UserName
-            </p>
+          User Name:
+          <input type="text" name="UserName" size="30" maxlength="20">
         </div>
-    
+
         <div class="UserPassword">
-            <p class="UserPassword">
-            UserPassword
-            </p>
+            User Password:
+            <input type="text" name="UserPassword" size="30" maxlength="20">
         </div>
-        
+
         <div class="UserLoginBotton">
             <button type="submit">
             LOGIN
