--- a/app/views/post/_post.html
+++ b/app/views/post/_post.html
@@ -24,7 +24,7 @@
     border-bottom: 1px solid white;
   }
   div.FilmType {
-    width: 20%;
+    width: 25%;
     display: inline-block;
     border-bottom: 1px solid white;
   }
@@ -114,7 +114,7 @@
 		</div>
 
 		<div class="FilmName">
-		FilmName
+		FilmName(Date)
 		</div>
 
 		<div class="FilmType">
